[package]
name = "opsgenie_rust"
version = "0.1.0"
authors = ["wojtekw92 <wwozniak92@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
