[package]
name = "opsgenie"
version = "0.0.1"
authors = ["wojtekw92 <wwozniak92@gmail.com>"]
edition = "2018"

description = "Simple client library for creating and closing alerts on opsgenie"

homepage = "https://github.com/wojtekw92/opsgenie_rust/blob/master/README.md"
repository = "https://github.com/wojtekw92/opsgenie_rust"

readme = "README.md"
keywords = ["opsgenie", "alert"]
categories = ["development-tools", "api-bindings"]

license = "MIT"

[dependencies]
reqwest = "0.9.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
